# API-South-Park

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  docker-compose.yml  init.sql  pyproject.toml  requirements.txt  vercel.json
data/: changelog_order.toon  post_order.json  post_order.toon
docs/: Database_Progress.MD
docs/changelog_posts/: Version_0.2.MD  Version_0.3.MD  Version_0.4.MD  Version_0.5.MD  Version_0.6.5.MD  Version_0.6.MD
img/: __init__.py
img/games/: South_Park_pinball_Videogames.avif
javascript/: iframe_content.js  main.js
src/: api.py  main.py
src/controller/: album_controller.py  alter_ego_controller.py  character_controller.py  chinpokomon_controller.py  data_controller.py  database_base.py  database_connection.py  database_status.py  database_test.py  date_controller.py  easter_egg_controller.py  episodes_controller.py  family_controller.py  game_controller.py  songs_controller.py  specials_controller.py
src/experimental/: create_character_card_web.py
src/model/: ApiObject.py  album.py  alter_ego.py  butters_punishments.py  characters.py  chinpokomon.py  episode.py  family.py  fortnite_cosmetics.py  fortnite_items.py  game.py  group.py  song.py  specials.py
src/website_elements/: create_404_iamge_web.py  create_404_image_web.py  create_album_card_web.py  create_alter_ego_card_web.py  create_changelog_buttons.py  create_character_card_web.py  create_episode_card_web.py  create_families_card_web.py  create_footer_web.py  create_game_card_web.py  create_post_card_grid.py  create_song_card_web.py  create_specials_card_web.py
styles/: style.css  style_desktop.css  style_mobile.css  style_small_mobile.css  style_tablet.css
templates/: 404.html  albums.html  alter_egos.html  blog_page.html  blog_page_post.html  changelog_page.html  characters.html  episodes.html  example.html  families.html  games.html  index.html  songs.html  specials.html
tests/: test_album_database.py  test_all_alter_ego_characters_database.py  test_alterego_database.py  test_butters_punishments.py  test_character_database.py  test_chinpokomon_database.py  test_database_connection_status.py  test_episode_database.py  test_family_database.py  test_game_database.py  test_group_database.py  test_last_episode_database.py  test_random_album_database.py  test_random_alterego_database.py  test_random_character_database.py  test_random_chinpokomon_database.py  test_random_episode_database.py  test_random_family_database.py  test_random_game_database.py  test_random_song_database.py  test_random_specials_database.py  test_song_database.py  test_specials_datbase.py  test_today_birthday_database.py
(+159 files in other folders)
