[project]
name = "southpark-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlos Chacón",email = "chaconmooncarlos@gmail.com"}
]
# readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]

[tool.poetry]
packages = [
        {include = "src", from = "."},
        {include = "data", from = "."},
        {include = "img", from = "."},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
